--- a/IMDB Favorites/Base.lproj/Main.storyboard
+++ b/IMDB Favorites/Base.lproj/Main.storyboard
@@ -114,53 +114,77 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iJc-Fb-Kxc">
-                                <fontDescription key="fontDescription" type="system" pointSize="36"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <stackView opaque="NO" contentMode="center" axis="vertical" distribution="equalCentering" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="HXY-7N-ZGv">
+                            <stackView opaque="NO" contentMode="center" axis="vertical" distribution="equalSpacing" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="HXY-7N-ZGv">
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Year: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9V5-88-qRx">
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Title" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iJc-Fb-Kxc">
+                                        <frame key="frameInset" width="343" height="36"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Playtime: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1I-uo-QPu">
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Year: " textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9V5-88-qRx">
+                                        <frame key="frameInset" minY="61" width="55" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Genre: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fzh-xP-Z9x">
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Playtime: " textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a1I-uo-QPu">
+                                        <frame key="frameInset" minY="113" width="96" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rating: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hY1-Mn-c4L">
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Genre: " textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fzh-xP-Z9x">
+                                        <frame key="frameInset" minY="164" width="71" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Last Seen: " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hlG-X1-W17">
-                                        <fontDescription key="fontDescription" type="system" pointSize="24"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Rating: " textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hY1-Mn-c4L">
+                                        <frame key="frameInset" minY="215" width="75" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="Country: " textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HQp-d0-fj2">
+                                        <frame key="frameInset" minY="267" width="90" height="27"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5ac-5W-F7f" userLabel="Remove Last Seen">
+                                        <frame key="frameInset" minY="318" width="343" height="39"/>
+                                        <color key="backgroundColor" red="0.3529411764705882" green="0.78431372549019607" blue="0.98039215686274506" alpha="1" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="22"/>
+                                        <state key="normal" title="Add Last Seen Date">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        </state>
+                                    </button>
+                                    <datePicker contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="date" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="sJo-MA-UA0">
+                                        <frame key="frameInset" minY="382" height="216" maxX="23"/>
+                                        <date key="date" timeIntervalSinceReferenceDate="503783673.922934">
+                                            <!--2016-12-18 19:54:33 +0000-->
+                                        </date>
+                                    </datePicker>
                                 </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="iJc-Fb-Kxc" secondAttribute="trailing" id="6DM-7L-TKu"/>
+                                    <constraint firstItem="iJc-Fb-Kxc" firstAttribute="leading" secondItem="HXY-7N-ZGv" secondAttribute="leading" id="Otz-6f-ua8"/>
+                                    <constraint firstAttribute="trailing" secondItem="5ac-5W-F7f" secondAttribute="trailing" id="VLW-0F-5Gn"/>
+                                    <constraint firstItem="5ac-5W-F7f" firstAttribute="leading" secondItem="HXY-7N-ZGv" secondAttribute="leading" id="q8u-gn-0dV"/>
+                                </constraints>
                             </stackView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="leadingMargin" secondItem="iJc-Fb-Kxc" secondAttribute="leading" id="4uy-Yk-K2s"/>
-                            <constraint firstItem="iJc-Fb-Kxc" firstAttribute="centerX" secondItem="B1Y-EH-5VI" secondAttribute="centerX" id="D4y-k3-Hbg"/>
-                            <constraint firstItem="HXY-7N-ZGv" firstAttribute="top" secondItem="lnP-eK-rmY" secondAttribute="bottom" constant="123" id="QUN-TH-SLZ"/>
-                            <constraint firstItem="HXY-7N-ZGv" firstAttribute="centerX" secondItem="B1Y-EH-5VI" secondAttribute="centerX" id="cMA-Sz-Bsr"/>
-                            <constraint firstItem="iJc-Fb-Kxc" firstAttribute="top" secondItem="lnP-eK-rmY" secondAttribute="bottom" constant="8" id="xhv-uy-OaA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="HXY-7N-ZGv" secondAttribute="trailing" id="8dt-Pv-dAB"/>
+                            <constraint firstItem="HXY-7N-ZGv" firstAttribute="leading" secondItem="B1Y-EH-5VI" secondAttribute="leadingMargin" id="EHG-YN-moi"/>
+                            <constraint firstItem="baw-ZP-1XL" firstAttribute="top" secondItem="HXY-7N-ZGv" secondAttribute="bottom" id="ew2-Da-Ygu"/>
+                            <constraint firstItem="HXY-7N-ZGv" firstAttribute="top" secondItem="lnP-eK-rmY" secondAttribute="bottom" id="iNe-qh-aD7"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="movieGenre" destination="fzh-xP-Z9x" id="PP4-mb-daQ"/>
-                        <outlet property="movieLastSeen" destination="hlG-X1-W17" id="0nR-8s-enj"/>
                         <outlet property="movieRating" destination="hY1-Mn-c4L" id="P5y-Tm-vvw"/>
                         <outlet property="movieRuntime" destination="a1I-uo-QPu" id="OiR-cB-e5Q"/>
                         <outlet property="movieTitle" destination="iJc-Fb-Kxc" id="Q27-qv-dvd"/>
