--- a/IMDB Favorites/Base.lproj/Main.storyboard
+++ b/IMDB Favorites/Base.lproj/Main.storyboard
@@ -160,6 +160,9 @@
                                         <date key="date" timeIntervalSinceReferenceDate="503783673.922934">
                                             <!--2016-12-18 19:54:33 +0000-->
                                         </date>
+                                        <connections>
+                                            <action selector="movieLastSeenDateChanged:" destination="lE8-hu-qAd" eventType="valueChanged" id="Mrm-Hd-m9m"/>
+                                        </connections>
                                     </datePicker>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AQS-3T-JEy">
                                         <color key="backgroundColor" red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
